--- a/.github/workflows/build_linux.yaml
+++ b/.github/workflows/build_linux.yaml
@@ -3,7 +3,9 @@ on:
   push:
     branches:
       - master
-      - release
+      - 'feature/*'
+    tags:
+      - 'v*'
 jobs:
   build:
     name: Build Linux
@@ -12,14 +14,46 @@ jobs:
       - name: Fix up git URLs
         run: echo -e '[url "https://github.com/"]\n  insteadOf = "git@github.com:"' >> ~/.gitconfig
         shell: bash
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v4
         with:
-          token: ${{ secrets.ACCESS_TOKEN }}
           submodules: true
-      - name: "Run script"
+      - name: Install dependencies
         run: |
-          export OS="linux"
-          ./ci/build.sh
+          sudo apt-get update
+          sudo apt-get install clang ninja-build git ladspa-sdk freeglut3-dev g++ libasound2-dev libcurl4-openssl-dev libfreetype6-dev libjack-jackd2-dev libx11-dev libxcomposite-dev libxcursor-dev libxinerama-dev libxrandr-dev mesa-common-dev libwebkit2gtk-4.1-dev xvfb
+      - name: Build plugin
+        run: |
+          # Build
+          cmake -B build -G Ninja -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++
+          cmake --build build --config Release
+
+          # Package
+          mkdir -p ci/bin
+          cd ci/bin
+          mkdir -p lv2 vst vst3
+
+          cp -R "../../build/Piano_artefacts/LV2/Piano.lv2" lv2/
+          cp -R "../../build/Piano_artefacts/VST/libPiano.so" "vst/Piano.so"
+          cp -R "../../build/Piano_artefacts/VST3/Piano.vst3" vst3/
+
+          # Create zip
+          zip -r Piano_Linux.zip vst/Piano.so vst3/Piano.vst3 lv2/Piano.lv2
+
+          # Upload to socalabs on release tag
+          if [[ "$GITHUB_REF" == refs/tags/v* ]]; then
+            curl -F "files=@Piano_Linux.zip" "https://socalabs.com/files/set.php?key=$APIKEY"
+          fi
         shell: bash
         env:
           APIKEY: ${{ secrets.APIKEY }}
+      - name: Upload Artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: Piano_Linux
+          path: ci/bin/*.zip
+          retention-days: 30
+      - name: Upload to GitHub Release
+        if: startsWith(github.ref, 'refs/tags/v')
+        uses: softprops/action-gh-release@v1
+        with:
+          files: ci/bin/*.zip
