--- a/.github/workflows/build_linux.yaml
+++ b/.github/workflows/build_linux.yaml
@@ -30,7 +30,7 @@ jobs:
           # Strip debug symbols
           strip build/Piano_artefacts/VST/libPiano.so
           strip build/Piano_artefacts/VST3/Piano.vst3/Contents/x86_64-linux/Piano.so
-          strip build/Piano_artefacts/LV2/Piano.lv2/Piano.so
+          strip build/Piano_artefacts/LV2/Piano.lv2/libPiano.so
 
           # Package
           mkdir -p ci/bin
