--- a/.github/workflows/build_macos.yaml
+++ b/.github/workflows/build_macos.yaml
@@ -10,6 +10,7 @@ jobs:
   build:
     name: Build macOS
     runs-on: macos-latest
+    timeout-minutes: 30
     steps:
       - name: Fix up git URLs
         run: |
