--- a/.github/workflows/build_linux.yaml
+++ b/.github/workflows/build_linux.yaml
@@ -17,7 +17,7 @@ jobs:
         shell: bash
       - uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: recursive
       - name: Install dependencies
         run: |
           sudo apt-get update
