--- a/.github/workflows/build_macos.yaml
+++ b/.github/workflows/build_macos.yaml
@@ -18,7 +18,7 @@ jobs:
         shell: bash
       - uses: actions/checkout@v4
         with:
-          submodules: true
+          submodules: recursive
       - uses: maxim-lobanov/setup-xcode@v1
         with:
           xcode-version: latest-stable
